--- a/theme/other.css
+++ b/theme/other.css
@@ -7,6 +7,22 @@
 	padding: 5px;
 }
 
+.action {
+	color: #aaaaaa;
+	background-color: #404040;
+	border-color: #aaaaaa;
+	border-style: outset;
+	border-width: 1px;
+	border-radius: 3px;
+	padding: 2px;
+	margin: 2px;
+}
+
+.inventoryImage {
+	width: 32px;
+	height: 32px;
+}
+
 .lifeBarMiddle {
 	
 }
