--- a/theme/other.css
+++ b/theme/other.css
@@ -1,4 +1,47 @@
-.actionMessage {
+.stats th {
+	background-color: #000000;
+	color: silver;
+	text-align: left;
+	padding: 2px 6px;
+}
+
+.stats td {
+	color: silver;
+	text-align: center;
+	padding: 3px 6px;
+}
+
+.inventory th {
+	background-color: #000000;
+	color: silver;
+	text-align: left;
+	padding: 2px 6px;
+}
+
+.inventory td {
+	color: silver;
+	text-align: center;
+	padding: 3px 6px;
+}
+
+tr.odd {
+	background: #404040;
+}
+
+tr.even {
+	background: #303030;
+}
+
+.errorMessage {
+	background-color: lightyellow;
+	color: darkred;
+	border-width: 2px;
+	border-style: solid;
+	border-radius: 10px;
+	padding: 5px;
+}
+
+.successMessage {
 	background-color: lightyellow;
 	color: black;
 	border-width: 2px;
@@ -12,6 +55,17 @@
 	background-color: #404040;
 	border-color: #aaaaaa;
 	border-style: outset;
+	border-width: 1px;
+	border-radius: 3px;
+	padding: 2px;
+	margin: 2px;
+}
+
+.actionDisabled {
+	color: #808080;
+	background-color: #404040;
+	border-color: #aaaaaa;
+	border-style: dotted;
 	border-width: 1px;
 	border-radius: 3px;
 	padding: 2px;
