--- a/theme/other.css
+++ b/theme/other.css
@@ -11,6 +11,10 @@
 	padding: 3px 6px;
 }
 
+.inventory {
+	color: silver;
+}
+
 .inventory th {
 	background-color: #000000;
 	color: silver;
@@ -25,18 +29,20 @@
 }
 
 .inventoryBox {
-	width: 400px;
+	width: 300px;
 	border-style: inset;
 	border-width: 2px;
 	border-radius: 5px;
+	min-height: 120px
 }
 
 .objetCard {
-	display:inline-block;
+	display: inline-block;
 	width: 40px;
 	border-width: 2px;
 	border-style: outset;
 	border-radius: 2px;
+	text-align: center;
 }
 
 .objetTooltip {
@@ -44,18 +50,20 @@
 }
 
 .playerBox {
-	width: 400px;
+	width: 300px;
 	border-style: inset;
 	border-width: 2px;
 	border-radius: 5px;
+	min-height: 120px
 }
 
 .playerCard {
-	display:inline-block;
+	display: inline-block;
 	width: 40px;
 	border-width: 2px;
 	border-style: outset;
 	border-radius: 2px;
+	text-align: center;
 }
 
 .playerTooltip {
@@ -137,6 +145,7 @@ tr.even {
 }
 
 .action {
+	display: inline-block;
 	color: #aaaaaa;
 	background-color: #404040;
 	border-color: #aaaaaa;
@@ -144,13 +153,13 @@ tr.even {
 	border-width: 1px;
 	border-radius: 3px;
 	padding: 2px;
-	margin: 2px;
+	margin: 4px;
 }
 
 .actionDisabled {
-	color: #808080;
+	color: silver;
 	background-color: #404040;
-	border-color: #aaaaaa;
+	border-color: silver;
 	border-style: dotted;
 	border-width: 1px;
 	border-radius: 3px;
