change acoolemie bar

--- a/theme/other.css
+++ b/theme/other.css
@@ -228,6 +228,20 @@ tr.even {
 	height: 32px;
 }
 
+.lifeBarMiddle2 {
+	
+}
+
+.lifeBarMiddle2 td {
+	padding: 0px;
+	margin: 0px;
+}
+
+.lifeBarMiddle2 img {
+	width: 16px;
+	height: 16px;
+}
+
 .lifeBarMiddle {
 	
 }
