--- a/theme/other.css
+++ b/theme/other.css
@@ -28,6 +28,11 @@
 	padding: 3px 6px;
 }
 
+.inventory img {
+	width: 32px;
+	height: 32px;
+}
+
 .inventoryBox {
 	width: 290px;
 	border-style: inset;
@@ -56,8 +61,8 @@
 }
 
 .playerBox {
-	border-style: inset;
-	border-width: 2px;
+	border-style: solid;
+	border-width: 1px;
 	border-radius: 5px;
 	min-height: 120px
 }
@@ -68,6 +73,7 @@
 	border-width: 2px;
 	border-style: outset;
 	border-radius: 2px;
+	box-shadow: 4px 2px 4px black;
 	text-align: center;
 	margin: 5px;
 }
@@ -132,7 +138,7 @@
 	border-width: 2px;
 	border-radius: 5px;
 	overflow: scroll;
-	overflow-x : hidden;
+	overflow-x: hidden;
 	overflow-y: scroll;
 	width: 290px;
 	height: 500px;
@@ -220,7 +226,7 @@ tr.even {
 	border-style: outset;
 	border-width: 1px;
 	border-radius: 3px;
-	padding: 2px;
+	padding: 2px 4px;
 	margin: 4px;
 }
 
